# design-pattern

./: .gitignore
sidecar/: docker-compose.yml  prometheus.yml
sidecar/main-app/: Cargo.toml  Dockerfile
sidecar/main-app/src/: main.rs  middleware.rs
sidecar/scripts/: load-test.sh
sidecar/sidecar/: Cargo.toml  Dockerfile
sidecar/sidecar/src/: main.rs
sidecar/testing/: Cargo.toml
sidecar/testing/src/: load_test.rs  verify_metrics.rs
