[package]
name = "testing-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load_test"
path = "src/load_test.rs"

[[bin]]
name = "verify_metrics"
path = "src/verify_metrics.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
influxdb2 = "0.4"
anyhow = "1.0"